[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-risk-insight"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gitdb",
    "pygit2",
    "joblib",
    "jsonpickle",
    "PyYAML",
    "smmap",
    "tabulate",
    "requests",
    "ansible",
    "ruamel.yaml",
    "filelock",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "ansible_risk_insight._version.__version__"}

[project.scripts]
ansible-risk-insight = "ansible_risk_insight:main"
ari = "ansible_risk_insight:main"

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, W503,"
max-line-length = 150
