[metadata]
name = openstack-ansible-os_tempest
summary = os_tempest for OpenStack Ansible
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/openstack-ansible-os_tempest/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[files]
data_files =
    usr/local/share/ansible/roles/os_tempest/defaults = defaults/*
    usr/local/share/ansible/roles/os_tempest/meta = meta/*
    usr/local/share/ansible/roles/os_tempest/tasks = tasks/*
    usr/local/share/ansible/roles/os_tempest/templates = templates/*
    usr/local/share/ansible/roles/os_tempest/files = files/*
    usr/local/share/ansible/roles/os_tempest/vars = vars/*

