[metadata]
name = ansible-role-python_venv_build
summary = Ansible role to manage the building of python venvs
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/ansible-role-python_venv_build/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[files]
data_files =
    usr/local/share/ansible/roles/python_venv_build/defaults = defaults/*
    usr/local/share/ansible/roles/python_venv_build/meta = meta/*
    usr/local/share/ansible/roles/python_venv_build/tasks = tasks/*
    usr/local/share/ansible/roles/python_venv_build/templates = templates/*
    usr/local/share/ansible/roles/python_venv_build/handlers = handlers/*
    usr/local/share/ansible/roles/python_venv_build/vars = vars/*
