[metadata]
name = ansible-resolvconf
summary = Role for configuring system resolvers
description-file =
    README.rst
author = Logan V.
author-email = logan2211@gmail.com
home-page = https://logan.protiumit.com
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
